# spateGAN_ERA5

./: .gitignore  README.md  downscaling_example.py  environment.yaml  main.py  pyproject.toml  requirements.txt
config/: config.yml
notebooks/: downscaling.ipynb
raw/: downscaling_example.py  main.py
raw/src/spategan_era5/: downscaling_inference.py  inference.py  model.py
src/spategan_era5/: __init__.py  dataloader.py  downscaling_inference.py  inference.py  model.py  pipeline.py  preprocessing.py  projection.py  utils.py
training_reproduction/: __init__.py  config_cpu_smoke.yml  config_train.yml  dataset.py  losses.py  methods.py  model.py  run.py  run_cpu_comparison.py  trainer.py
training_reproduction/checkpoints/: train_metrics.csv
utils/: download_zenodo_17417589.py  downscaling.ipynb  test.ipynb
